// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using the FelaComponent component should accept a string primitive type via as-prop 1`] = `
Object {
  "css": ".a {
    font-size: 12px
}

.b {
    color: red
}",
  "html": "<span class=\\"a b\\"></span>",
}
`;

exports[`Using the FelaComponent component should compose extension rules 1`] = `
Object {
  "css": ".a {
    font-size: 12px
}

.b {
    color: red
}

.c {
    background-color: blue
}",
  "html": "<button class=\\"a b c\\">Hello World</button>",
}
`;

exports[`Using the FelaComponent component should compose extension rules 2`] = `
Object {
  "css": ".a {
    font-size: 12px
}

.b {
    color: black
}

.c {
    background-color: blue
}",
  "html": "<button class=\\"a b c\\">Hello World</button>",
}
`;

exports[`Using the FelaComponent component should correctly pass the theme and other props to functional style 1`] = `
Object {
  "css": ".a {
    font-size: 15px
}

.b {
    background-color: blue
}",
  "html": "<div class=\\"a b\\">I am red and written in 15px.</div>",
}
`;

exports[`Using the FelaComponent component should correctly render a fela rule 1`] = `
Object {
  "css": ".a {
    font-size: 12px
}

.b {
    color: red
}",
  "html": "<div class=\\"a b\\">I am red and written in 12px.</div>",
}
`;

exports[`Using the FelaComponent component should default to a div 1`] = `
Object {
  "css": ".a {
    font-size: 12px
}

.b {
    color: red
}",
  "html": "<div class=\\"a b\\"></div>",
}
`;

exports[`Using the FelaComponent component should render children in default mode 1`] = `
Object {
  "css": ".a {
    font-size: 12px
}

.b {
    color: red
}",
  "html": "<div class=\\"a b\\"><span>Hello World</span></div>",
}
`;

exports[`Using the FelaComponent component should render children using the correct as-prop 1`] = `
Object {
  "css": ".a {
    font-size: 12px
}

.b {
    color: red
}",
  "html": "<h1 class=\\"a b\\">Hello World</h1>",
}
`;
